added and positioned social media buttons

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="styles/mystyles.css">
         <!-- endbuild -->
 </head>
-  <body class="container-thing" ng-app="magnarelli.orgApp">
+  <body class="container-thing background" ng-app="magnarelli.orgApp">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -30,11 +30,22 @@
         <div class="large-8 columns">
             <h1 class="left" id="name-header"><a class="regular-link" href="index.html">James Magnarelli</a></h1>
         </div>
+        <div class="large-4 columns">
+         <div id="my-social-buttons" class='right'>
+            <a href="https://www.linkedin.com/in/jmagnare"><img src="misc/linkedin.png" width="40px"></a>
+            <a href="https://www.github.com/jmagnare"><img src="misc/github.png" width="40px"></a>
+            <a href="mailto:jmagnare@gmail.com"><img src="misc/email.png" width="40px"></a>
+            <a href="https://www.facebook.com/james.magnarelli"><img src="misc/facebook.png" width="39px"></a>
+                </div>
+        </div>
         <hr>
-    <div>
+    </div>
 
     <!-- Add your site or application content here -->
-    <div class="container" ng-view=""></div>
+    <div class="row">
+        <div class="container" ng-view=""></div>
+    </div>
+
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
