added forgotten files, changed favicon, modified styling

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>James Magnarelli</title>
-    <meta name="description" content="">
+    <meta name="description" content="I'm a Software Developer in the Boston area. I enjoy building things through rapid experimentation with customers.">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
