--- a/app/whatlike.html
+++ b/app/whatlike.html
@@ -11,9 +11,13 @@
     <link rel="stylesheet" href="styles/mystyles.css">
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script type="text/javascript" src="http://sigmajs.org/js/sigma.min.js"></script>
+    <!--<script type="text/javascript" src="http://sigmajs.org/js/sigma.min.js"></script>
     <script type="text/javascript" src="scripts/sigma.parseGexf.js"></script>
-    <script type="text/javascript" src="scripts/likesgraph.js"></script>
+    <script type="text/javascript" src="scripts/likesgraph.js"></script>             -->
+
+    <script type="text/javascript" src="http://mbostock.github.com/d3/d3.js" charset="utf-8"></script>
+    <script type="text/javascript" src="http://mbostock.github.com/d3/d3.geom.js"></script>
+    <script type="text/javascript" src="http://mbostock.github.com/d3/d3.layout.js"></script>
 
     <style type="text/css">
             /* sigma.js context : */
@@ -31,6 +35,7 @@
             left: 0;
         }
     </style>
+
 
 </head>
 <body>
@@ -51,9 +56,72 @@
 </div>
  <div class="row">
      <div class="large-12 columns">
-        <div class="sigma" id="sig"></div>
+        <!--<div class="sigma" id="sig"></div>-->
+         <div id="d3"></div>
      </div>
  </div>
 
 </body>
+<script>
+
+    var width = 960,
+            height = 500
+
+    var svg = d3.select("#d3").append("svg")
+            .attr("width", width)
+            .attr("height", height);
+
+    var force = d3.layout.force()
+            .gravity(.05)
+            .distance(100)
+            .charge(-100)
+            .size([width, height]);
+    var color = d3.scale.category20();
+
+    d3.json("misc/likes.json", function(json, error) {
+        force
+                .nodes(json.nodes)
+                .links(json.links)
+                .start();
+
+        var link = svg.selectAll(".link")
+                .data(json.links)
+                .enter().append("line")
+                .attr("class", "link")
+                .attr("stroke-width", function(d) {return Math.sqrt(d.value);});
+
+        var node = svg.selectAll(".node")
+                .data(json.nodes)
+                .enter().append("g")
+                .attr("class", "node")
+                .call(force.drag);
+        /*
+        node.append("image")
+                .attr("xlink:href", "https://github.com/favicon.ico")
+                .attr("x", -8)
+                .attr("y", -8)
+                .attr("width", 16)
+                .attr("height", 16);
+         */
+        node.append("circle")
+                .attr("class", "node")
+                .attr("r", 5)
+                .style("fill", function(d) { return color(d.group)});
+
+        node.append("text")
+                .attr("dx", 12)
+                .attr("dy", ".35em")
+                .text(function(d) { return d.name });
+
+        force.on("tick", function() {
+            link.attr("x1", function(d) { return d.source.x; })
+                    .attr("y1", function(d) { return d.source.y; })
+                    .attr("x2", function(d) { return d.target.x; })
+                    .attr("y2", function(d) { return d.target.y; });
+
+            node.attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; });
+        });
+    });
+
+</script>
 </html>
