--- a/app/whatlike.html
+++ b/app/whatlike.html
@@ -56,72 +56,13 @@
 </div>
  <div class="row">
      <div class="large-12 columns">
+         <p>This is a graph of things I enjoy. It's a tree: objects have a hierarchical relationship to one another, and specific categories have their own color. The graph isn't complete.</p>
+         <p>Drag the graph around if it happens to render in a strange shape. It's fun to play with.</p>
         <!--<div class="sigma" id="sig"></div>-->
          <div id="d3"></div>
      </div>
  </div>
 
 </body>
-<script>
-
-    var width = 960,
-            height = 500
-
-    var svg = d3.select("#d3").append("svg")
-            .attr("width", width)
-            .attr("height", height);
-
-    var force = d3.layout.force()
-            .gravity(.05)
-            .distance(100)
-            .charge(-100)
-            .size([width, height]);
-    var color = d3.scale.category20();
-
-    d3.json("misc/likes.json", function(json, error) {
-        force
-                .nodes(json.nodes)
-                .links(json.links)
-                .start();
-
-        var link = svg.selectAll(".link")
-                .data(json.links)
-                .enter().append("line")
-                .attr("class", "link")
-                .attr("stroke-width", function(d) {return Math.sqrt(d.value);});
-
-        var node = svg.selectAll(".node")
-                .data(json.nodes)
-                .enter().append("g")
-                .attr("class", "node")
-                .call(force.drag);
-        /*
-        node.append("image")
-                .attr("xlink:href", "https://github.com/favicon.ico")
-                .attr("x", -8)
-                .attr("y", -8)
-                .attr("width", 16)
-                .attr("height", 16);
-         */
-        node.append("circle")
-                .attr("class", "node")
-                .attr("r", 5)
-                .style("fill", function(d) { return color(d.group)});
-
-        node.append("text")
-                .attr("dx", 12)
-                .attr("dy", ".35em")
-                .text(function(d) { return d.name });
-
-        force.on("tick", function() {
-            link.attr("x1", function(d) { return d.source.x; })
-                    .attr("y1", function(d) { return d.source.y; })
-                    .attr("x2", function(d) { return d.target.x; })
-                    .attr("y2", function(d) { return d.target.y; });
-
-            node.attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; });
-        });
-    });
-
-</script>
+<script type="text/javascript" src="scripts/likesgraph.js"></script>
 </html>
