new stuff, no minification

--- a/app/whatlike.html
+++ b/app/whatlike.html
@@ -6,9 +6,10 @@
     <meta name="description" content="I'm a Software Developer in the Boston area. I enjoy building things through rapid experimentation with customers.">
     <meta name="viewport" content="width=device-width">
 
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/foundation.min.css">
-    <link rel="stylesheet" href="styles/mystyles.css">
+    <link rel="stylesheet" href="../styles/mystyles.css">
+    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/foundation.min.css">
+
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <!--<script type="text/javascript" src="http://sigmajs.org/js/sigma.min.js"></script>
@@ -62,7 +63,7 @@
          <div id="d3"></div>
      </div>
  </div>
-
+<script type="text/javascript" src="../scripts/likesgraph.js"></script>
 </body>
-<script type="text/javascript" src="scripts/likesgraph.js"></script>
+
 </html>
