got graph totally working. Just need to add more likes

--- a/app/whatlike.html
+++ b/app/whatlike.html
@@ -57,7 +57,7 @@
 </div>
  <div class="row">
      <div class="large-12 columns">
-         <p>This is a graph of things I enjoy. It's a tree: objects have a hierarchical relationship to one another, and specific categories have their own color. The graph isn't complete.</p>
+         <p>This is a graph of some of the things I enjoy. It's a tree: objects have a hierarchical relationship to one another, and specific categories have their own color. Click the nodes with a black circle around them to expand them.</p>
          <p>Drag the graph around if it happens to render in a strange shape. It's fun to play with.</p>
         <!--<div class="sigma" id="sig"></div>-->
          <div id="d3"></div>
