Beginnings of color work - adjusted margins, too

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="styles/foundation.min.css">
         <link rel="stylesheet" href="styles/mystyles.css">
         <link href='http://fonts.googleapis.com/css?family=Voces' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
         <!-- endbuild -->
 </head>
   <body class="container-thing background" ng-app="magnarelli.orgApp">
