--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,15 @@
         </div>
       </div>
     </div>
+
+    <!-- TODO (jmagnarelli) add slide-under feature for this content -->
+    <!-- TODO (jmagnarelli) add content for 'who' -->
+    <!-- TODO (jmagnarelli) add content for 'what' -->
+    <!-- TODO (jmagnarelli) add content for 'when' -->
+    <!-- TODO (jmagnarelli) add content for 'where' -->
+    <!-- TODO (jmagnarelli) add content for 'why' -->
+    <!-- TODO (jmagnarelli) sign up for google analytics and try it out -->
+
     <div class="content-container row" id="who">
       <div class="large-4 columns">
         FOUR COLUMNS WOW
