Added some content

--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,6 @@
       </div>
     </div>
 
-    <!-- TODO (jmagnarelli) add slide-under feature for this content -->
     <!-- TODO (jmagnarelli) add content for 'who' -->
     <!-- TODO (jmagnarelli) add content for 'what' -->
     <!-- TODO (jmagnarelli) add content for 'when' -->
@@ -88,11 +87,13 @@
     <!-- TODO (jmagnarelli) sign up for google analytics and try it out -->
 
     <div class="content-container row" id="who">
-      <div class="large-4 columns">
-        FOUR COLUMNS WOW
-      </div>
-      <div class="large-8 columns">
-        WOW SO MANY COLUMNS
+      <div class="large-12 columns">
+        <p>I'm James. I like to make things and talk to customers.</p>
+        <p>I'm passionate about feedback, and am happiest when rapidly iterating. I spend much of my time working on personal <a href="#what">projects</a>, most of which are available on <a href="http://www.github.com/jmagnarelli">GitHub</a>.</p>
+        <p>
+        When I'm not coding, I like to mountain bike, play guitar, and travel. I can also make a mean pizza.
+        </p>
+        <p>I'm currently a Software Engineer Co-op at <a href="http://www.hubspot.com">HubSpot</a>, and a senior computer science student at <a href="http://www.northeastern.edu">Northeastern University</a>.</p>
       </div>
     </div>
     <div class="content-container row" id="what">
