--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="styles/mystyles.css">
         <link href='http://fonts.googleapis.com/css?family=Voces' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
         <!-- endbuild -->
 </head>
   <body class="container-thing background" ng-app="magnarelli.orgApp">
@@ -103,7 +104,12 @@
       THREE
     </div>
     <div class="content-container row" id="where">
-      FOUR
+      <div class="large-12 columns text-center">
+        <a href="//www.github.com/jmagnarelli"><i class="fa fa-github-square"></i></a>
+        <a href="//www.linkedin.com/in/jmagnare"><i class="fa fa-linkedin-square"></i></a>
+        <a href="mailto:jmagnare@gmail.com"><i class="fa fa-envelope"></i></a>
+        <a href="//www.facebook.com/james.magnarelli"><i class="fa fa-facebook-square"></i></a>
+      </div>
     </div>
     <div class="content-container row" id="why">
       FIVE
