Add colored bar at top

--- a/app/index.html
+++ b/app/index.html
@@ -112,7 +112,9 @@
       </div>
     </div>
     <div class="content-container row" id="why">
-      FIVE
+      <div class="large-12 columns text-center">
+        <p>Soon, there will be a blog here. I'm taking some time to put together decent content.</p>
+      </div>
     </div>
 
     <!-- Add your site or application content here -->
