--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
             </a>
             <a id="when-nav"class="nav-link" href="#when">
               <div class="nav-text">when</div>
-              <div class="nav-help-text">schedule</div>
+              <div class="nav-help-text">career</div>
             </a>
             <a id="where-nav"class="nav-link" href="#where">
               <div class="nav-text">where</div>
