Beginnings of a career page

--- a/app/index.html
+++ b/app/index.html
@@ -101,7 +101,30 @@
       TWO
     </div>
     <div class="content-container row" id="when">
-      THREE
+      <div class="row info-listing">
+        <div class="large-4 columns">
+        <img class="logo" src="../misc/hubspot_logo_black.png" alt="The cult of the sprocket">
+        </div>
+        <div class="large-8 columns">
+        STUFF lorem lorem sit amet blah blah this is content so much content wow such text very copy much express so describe
+        </div>
+      </div>
+      <div class="row info-listing">
+        <div class="large-4 columns">
+        <img class="logo" src="../misc/tt_logo.png" alt="America's second biggest tax collector">
+        </div>
+        <div class="large-8 columns">
+        STUFF lorem lorem sit amet blah blah this is content so much content wow such text very copy much express so describe
+        </div>
+      </div>
+      <div class="row info-listing">
+        <div class="large-4 columns">
+        <img class="logo" src="../misc/empirix_logo.jpg" alt="America's second biggest tax collector">
+        </div>
+        <div class="large-8 columns">
+        STUFF lorem lorem sit amet blah blah this is content so much content wow such text very copy much express so describe
+        </div>
+      </div>
     </div>
     <div class="content-container row" id="where">
       <div class="large-12 columns text-center">
@@ -116,15 +139,6 @@
         <p>Soon, there will be a blog here. I'm taking some time to put together decent content.</p>
       </div>
     </div>
-
-    <!-- Add your site or application content here -->
-    <!--
-    <div class="row">
-        <div class="container" ng-view=""></div>
-    </div>
-  -->
-
-
 
     <!-- TODO (jmagnarelli): figure out a better way to do this small-home stuff so it works for people w/o JS -->
 
