Added logos, fixed bug on initial page load, copied career styling to projects page. Next step: write career content, project content

--- a/app/index.html
+++ b/app/index.html
@@ -98,7 +98,38 @@
       </div>
     </div>
     <div class="content-container row" id="what">
-      TWO
+            <div class="row info-listing">
+        <div class="large-4 columns">
+        <img class="logo" src="../misc/hubspot_logo_black.png" alt="The cult of the sprocket">
+        </div>
+        <div class="large-8 columns">
+        STUFF lorem lorem sit amet blah blah this is content so much content wow such text very copy much express so describe
+        </div>
+      </div>
+      <div class="row info-listing">
+        <div class="large-4 columns">
+        <img class="logo" src="../misc/logo_ttcom.png" alt="America's second biggest tax collector">
+        </div>
+        <div class="large-8 columns">
+        STUFF lorem lorem sit amet blah blah this is content so much content wow such text very copy much express so describe
+        </div>
+      </div>
+      <div class="row info-listing">
+        <div class="large-4 columns">
+        <img class="logo" src="../misc/empirix_logo.jpg" alt="America's second biggest tax collector">
+        </div>
+        <div class="large-8 columns">
+        STUFF lorem lorem sit amet blah blah this is content so much content wow such text very copy much express so describe
+        </div>
+      </div>
+      <div class="row info-listing">
+        <div class="large-4 columns">
+        <img class="logo" src="../misc/neu-red.png" alt="America's second biggest tax collector">
+        </div>
+        <div class="large-8 columns">
+        STUFF lorem lorem sit amet blah blah this is content so much content wow such text very copy much express so describe
+        </div>
+      </div>
     </div>
     <div class="content-container row" id="when">
       <div class="row info-listing">
@@ -111,7 +142,7 @@
       </div>
       <div class="row info-listing">
         <div class="large-4 columns">
-        <img class="logo" src="../misc/tt_logo.png" alt="America's second biggest tax collector">
+        <img class="logo" src="../misc/logo_ttcom.png" alt="America's second biggest tax collector">
         </div>
         <div class="large-8 columns">
         STUFF lorem lorem sit amet blah blah this is content so much content wow such text very copy much express so describe
@@ -120,6 +151,14 @@
       <div class="row info-listing">
         <div class="large-4 columns">
         <img class="logo" src="../misc/empirix_logo.jpg" alt="America's second biggest tax collector">
+        </div>
+        <div class="large-8 columns">
+        STUFF lorem lorem sit amet blah blah this is content so much content wow such text very copy much express so describe
+        </div>
+      </div>
+      <div class="row info-listing">
+        <div class="large-4 columns">
+        <img class="logo" src="../misc/neu-red.png" alt="America's second biggest tax collector">
         </div>
         <div class="large-8 columns">
         STUFF lorem lorem sit amet blah blah this is content so much content wow such text very copy much express so describe
