Add abridged notice

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,13 @@
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+        <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+        <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+        <!--[if IE]>
+            <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+        <![endif]-->
+
+
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/foundation.css">
@@ -98,7 +105,7 @@
       </div>
     </div>
     <div class="content-container row" id="what">
-            <div class="row info-listing">
+      <div class="row info-listing">
         <div class="large-4 columns">
         <img class="logo" src="../misc/hubspot_logo_black.png" alt="The cult of the sprocket">
         </div>
@@ -130,6 +137,7 @@
         STUFF lorem lorem sit amet blah blah this is content so much content wow such text very copy much express so describe
         </div>
       </div>
+      <p id="abridged" class="text-center">This is just a summary. <a href="//www.github.com/jmagnarelli">GitHub</a> is the source of truth.</p>
     </div>
     <div class="content-container row" id="when">
       <div class="row info-listing">
@@ -164,6 +172,7 @@
         STUFF lorem lorem sit amet blah blah this is content so much content wow such text very copy much express so describe
         </div>
       </div>
+      <p id="abridged" class="text-center">This is just the abridged version. Check out the whole thing on <a href="//www.linkedin.com/in/jmagnare">LinkedIn</a></p>
     </div>
     <div class="content-container row" id="where">
       <div class="large-12 columns text-center">
